contact detail photo no longer touches text and fixed white box overflow problem on contact list

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -123,14 +123,16 @@ strong {
 /* Call Detail */
 
 .thumbnail_photo {
-	height: 5em;
+	max-height: 5em;
+  max-width: 4em;
 }
 
 .thumbnail_photo_list { /* used in contact list and search results */
   margin-left: -10px;
   padding-top: .25em;
 	max-height: 3.5em;
-  max-width: 4.5em;
+  max-width: 3.5em;
+  margin-bottom: .5em;
 }
 
 .contactrow { /* used for contact list rows and search results rows */
